# icestick-multi

./: meson.build
data/: icestick.pcf
rtl/: multi.v
